# skai_clean_vision

./: .gitignore  README
.cache/depthai/telemetry/: tmpIds.json
install/: local_setup.sh  setup.sh
install/Assem2/share/Assem2/: package.bash  package.zsh
install/arm_rviz/share/arm_rviz/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mock_camera/lib/mock_camera/: mock_camera
install/mock_camera/share/mock_camera/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/red_detector/lib/red_detector/: red_detector_node
log/: latest_build
src/arm_rviz/: setup.cfg  setup.py
src/arm_rviz/launch/: hardware_view.launch.py  rviz_baseline.launch.moc
src/arm_rviz/meshes/: F_1.STL  F_2.STL  J_3.STL  J_5.STL
src/arm_rviz/rviz/: baseline.rviz
src/arm_rviz/urdf/: skai_arm.urdf  skai_arm:urdf.demo
src/mock_camera/: package.xml  setup.cfg  setup.py
src/mock_camera/mock_camera/: mock_camera.py
src/moveit_goal_bridge/: CMakeLists.txt
src/moveit_goal_bridge/src/: moveit_goal_bridge.cpp
src/red_detector/: setup.py
src/skai_bringup/: setup.cfg  setup.py
src/skai_bringup/launch/: vision_system.launch.py
src/skai_bringup/skai_bringup/: add_leaf.py
src/skai_hardware_v2/: CMakeLists.txt  skai_hardware.xml
src/skai_hardware_v2/include/skai_hardware_v2/: skai_hardware.hpp
src/skai_hardware_v2/src/: skai_hardware.cpp
src/skai_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/skai_moveit_config/config/: moveit.rviz  ros2_controllers.yaml  skai_arm.ros2_control.xacro  skai_arm.srdf  skai_arm.urdf.xacro
src/skai_moveit_config/launch/: demo.launch.py  static_virtual_joint_tfs.launch.py
src/vision_gui/: package.xml  setup.cfg  setup.py
src/vision_moveit_bridge/: package.xml  setup.cfg  setup.py
(+71 files in other folders)
